--- a/views/login.jade
+++ b/views/login.jade
@@ -6,20 +6,23 @@ block content
     div
     +nav()
       +nav_item( "/" ) Home
-      +nav_item( "manage" ) Manage DNS
       +nav_item( "login", "active" ) Login
-    h1 Sign-in to the DNS Manager
-    p Use the same credentials as you have to the Lab Cloud.
-    form(method='post')
-      p
-        label(for='username') Username
-        input(type='text', name='username')
-      p
-        label(for='password') Password
-        input(type='password', name='password')
-      input(type='submit')
-    - each message in flash
-      h4(style="color: red;") #{message}
+    .row
+      div(class="col-xs-1 col-md-2") &nbsp;
+      div(class="col-xs-10 col-md-8") 
+        +panel("Sign-in to the DNS Manager")
+          p Use the same credentials as you have to the Lab Cloud.
+          form(method='post')
+            p
+              label(for='username') Username &nbsp;
+              input(type='text', name='username')
+            p
+              label(for='password') Password &nbsp;
+              input(type='password', name='password')
+            input(type='submit')
+          - each message in flash
+            h4(style="color: red;") #{message}
+      div(class="col-xs-1 col-md-2") &nbsp;
       
 script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
 script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
