--- a/views/unauthorised.jade
+++ b/views/unauthorised.jade
@@ -6,11 +6,14 @@ block content
     div
     +nav()
       +nav_item( "/" ) Home
-      +nav_item( "manage" ) Manage DNS
       +nav_item( "login" ) Login
-    +panel("Unathorised", "danger") 
-      p You're unathorised to view this page.
-      p Please <a href="/login">login</a> to continue
+    .row
+      div(class="col-xs-1 col-md-2") &nbsp;
+      div(class="col-xs-10 col-md-8") 
+        +panel("Unathorised", "danger") 
+          p You're unathorised to view this page.
+          p Please <a href="/login">login</a> to continue
+      div(class="col-xs-1 col-md-2") &nbsp;
       
 script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
 script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
