--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,6 @@
 html(lang='en')
   head
     title DNS Manager
-    link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
   body
     block content
