--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,11 @@
 html(lang='en')
   head
     title DNS Manager
-    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
     block content
+    
+    block scripts
+      script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
+      script(type='text/javascript', src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
